<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.varpar.weatherapp.chat.ChatListFragment"
        android:label="@string/title_activity_chat"
        tools:layout="@layout/fragment_chat_list" >
        <action
            android:id="@+id/action_navigation_chat_to_chat_room"
            app:destination="@id/chat_room" />
        <action
            android:id="@+id/action_navigation_chat_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.varpar.weatherapp.contact.ContactListFragment"
        android:label="@string/title_activity_contacts"
        tools:layout="@layout/fragment_contact_list" >
        <action
            android:id="@+id/action_navigation_contacts_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.uw.tcss450.varpar.weatherapp.profile.ProfileFragment"
        android:label="@string/title_activity_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.varpar.weatherapp.weather.WeatherFragment"
        android:label="Weather"
        tools:layout="@layout/fragment_weather" >
        <action
            android:id="@+id/action_navigation_weather_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.varpar.weatherapp.home.HomeFragment"
        android:label="@string/title_activity_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>
    <fragment
        android:id="@+id/chat_room"
        android:name="edu.uw.tcss450.varpar.weatherapp.chat.ChatRoomFragment"
        android:label="@string/title_fragment_chat_room" >
        <argument
            android:name="chatId"
            app:argType="integer" />
        <action
            android:id="@+id/action_chat_room_to_authActivity"
            app:destination="@id/authActivity" />
    </fragment>
    <activity
        android:id="@+id/authActivity"
        android:name="edu.uw.tcss450.varpar.weatherapp.AuthActivity"
        android:label="activity_auth"
        tools:layout="@layout/activity_auth" />

</navigation>