<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.register.RegisterFragment">


    <ImageView
        android:id="@+id/button_password_hint"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/baseline_question_mark_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/button_email_Hint"
        android:clickable="true"/>


    <EditText
        android:id="@+id/et_firstName"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/hint_fragment_auth_register_firstName"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_fragment_auth_register_lastName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_firstName" />


    <EditText
        android:id="@+id/et_emailText"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_activity_auth_login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lastName" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_activity_auth_login_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailText" />

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hint_fragment_auth_register_confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_activity_auth_login_button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmPassword"
        app:layout_constraintVertical_bias="0.29000002" />

    <ImageView
        android:id="@+id/button_email_Hint"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/baseline_question_mark_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/et_emailText"
        app:layout_constraintTop_toBottomOf="@+id/buttom_nameHint"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="189dp"
        android:layout_height="143dp"
        android:src="@drawable/baseline_assignment_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        tools:srcCompat="@drawable/baseline_assignment_24" />
    <ImageView
        android:id="@+id/buttom_nameHint"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:src="@drawable/baseline_question_mark_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/et_firstName"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.072"
        android:clickable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>
